[tool.poetry]
name = "sendlive"
version = "0.0.2"
description = "sendlive"
authors = ["Liam Brenner <liam@brenner.au>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/LiamBrenner/sendlive"
repository = "https://github.com/LiamBrenner/sendlive"
documentation = "https://sendlive.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/LiamBrenner/sendlive/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=8.1.7"
boto3 = {version= ">=1.34.0", optional=true}
google-cloud-video-live-stream = {version= ">=1.6.0", optional=true}

[tool.poetry.dev-dependencies]
Pygments = ">=2.17.2"
black = ">=23.12.0"
boto3-stubs = {extras=["essential"], version = "1.34.0", optional=true}
coverage = {extras = ["toml"], version = ">=7.3.3"}
darglint = ">=1.8.1"
flake8 = ">=6.1.0"
flake8-bandit = ">=4.1.1"
flake8-bugbear = ">=23.12.2"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
furo = ">=2023.9.10"
isort = ">=5.13.2"
mypy = ">=1.7.1"
pep8-naming = ">=0.13.3"
pre-commit = ">=3.6.0"
pre-commit-hooks = ">=4.5.0"
pytest = ">=7.4.3"
pyupgrade = ">=3.15.0"
safety = ">=2.3.5"
sphinx = ">=7.2.6"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=5.1.0"
typeguard = ">=4.1.5"
xdoctest = {extras = ["colors"], version = ">=1.1.2"}
myst-parser = {version = ">=2.0.0"}

[tool.poetry.extras]
aws = ["boto3"]
gcp = ["google-cloud-video-live-stream"]

[tool.poetry.scripts]
sendlive = "sendlive.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["sendlive", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
